Added EF Models Code First Approach
Added EF Models Code First Approach

--- a/rahulpatil/src/app/common/main/main.component.html
+++ b/rahulpatil/src/app/common/main/main.component.html
@@ -1,1 +1,148 @@
-<p>Main Comp</p>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Health Check</a>
+  <a href="#contact">World Cities</a>
+</div>
+
+<div style="padding-left:16px">
+  <img src="assets\images\rahulpatil.png" alt="Image Not Found"
+       height="100" width="100" />
+</div>
+
+<table style="width:100.7%;border-collapse:collapse;border:none;">
+  <tbody>
+    <tr>
+      <td style="width: 49.64%;border-top: none;border-right: none;border-left: none;border-image: initial;border-bottom: 1pt solid windowtext;padding: 0in;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:27px;font-family:  "Calibri",sans-serif;'>Rahul patil &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></strong></p>
+      </td>
+      <td colspan="2" style="width: 50.36%;border-top: none;border-right: none;border-left: none;border-image: initial;border-bottom: 1pt solid windowtext;padding: 0in;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" style="width: 59.58%;border-right: 1pt none white;border-bottom: 1pt none white;border-left: 1pt none white;border-image: initial;border-top: none;padding: 0in;height: 28.75pt;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-size:15px;font-family:"Calibri",sans-serif;color:#212121;'><br>&nbsp;Tech Lead with 12 years of strong experience in Front-end Development, Back-end Development areas with willingness to develop , design and lead the projects using Angular, Dot Net Core, C#, Rest API and SQL and Dotnet related technologies.</span></p>
+      </td>
+      <td style="width: 40.42%;border-bottom: 1pt none white;border-right: 1pt none white;border-top-style: none;border-left-style: none;padding: 0in;height: 28.75pt;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'><strong><span style='font-size:11px;font-family:"Calibri",sans-serif;'>&nbsp;</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'><strong><span style='font-size:15px;font-family:"Calibri",sans-serif;'>Phone: +1-</span></strong><span style='font-size:15px;font-family:"Calibri",sans-serif;'>614-822-6622</span></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'><strong><span style='font-size:15px;font-family:"Calibri",sans-serif;'>Email:&nbsp;</span></strong><a href="mailto:rahulpatil017@gmail.com"><span style='font-size:15px;font-family:"Calibri",sans-serif;'>rahulpatil017@gmail.com</span></a></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'><span style='font-family:"Calibri",sans-serif;'>LinkedIn:&nbsp;</span><a href="http://www.linkedin.com/in/rahulpatil017"><span style='font-family:"Calibri",sans-serif;'>rahulpatil017</span></a></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'><span style='font-family:"Calibri",sans-serif;'>GitHub:&nbsp;</span><a href="https://github.com/rahulpatil017"><span style='font-family:"Calibri",sans-serif;'>rahulpatil017</span></a></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;text-align:right;'>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="border:none;"><br></td>
+      <td style="border:none;"><br></td>
+      <td style="border:none;"><br></td>
+    </tr>
+  </tbody>
+</table>
+<p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+<div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in;'>
+  <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;border:none;padding:0in;'><strong><span style='font-size:15px;font-family:"Calibri",sans-serif;'>Key Skills</span></strong></p>
+</div>
+<p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+<table style="width:100.0%;border-collapse:collapse;border:none;">
+  <tbody>
+    <tr>
+      <td style="width: 1%;border: 1pt none white;padding: 0in;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Front End</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Angular&nbsp;</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>CSS,Bootstrap</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>HTML,JSON,RESTful API</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>TypeScript,JavaScript</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>XML</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Back End</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>.NET Core, .NET Framework 4.x</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>ADO.Net, EF Core, Dapper .Net</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>ASP.NET MVC, ASP.NET Web API Core</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>C#, Linq2SQL</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>WPF, WinForms, Windows Service</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>IIS&nbsp;</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Tools and Software&rsquo;s</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Visual Studio 2019</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>SQL Management Studio, SQLDBX, SQL Developer</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Ants Profiler, N-Cover, SQL Profiler, Argo UML, FX-Cop, Style-Cop, Fiddler</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Postman, Google Analytics</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Domain Expertise</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;'>Healthcare</span></li>
+          </ul>
+        </div>
+      </td>
+      <td style="width: 1%;border-top: 1pt none white;border-right: 1pt none white;border-bottom: 1pt none white;border-image: initial;border-left: none;padding: 0in;vertical-align: top;">
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Databases</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>SQL, PostgreSQL, Oracle&nbsp;</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>DevOps</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Concourse, Git, SVN</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Jenkins, Cloud Foundry</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>SDLC</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Agile, Jira, Waterfall</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Cloud</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>AWS, GCP, EC2</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>S3, PCF</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><strong><span style='font-size:15px;font-family:  "Calibri",sans-serif;'>Interfaces</span></strong></p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+        <div style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>
+          <ul style="margin-bottom:0in;list-style-type: undefined;margin-left:0in;">
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Okta</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Apigee</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Dose Calibrator</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Label Printers</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>Scanners</span></li>
+            <li style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'><span style='font-family:"Calibri",sans-serif;color:#212121;font-size:15px;color:#212121;'>New Relic</span></li>
+          </ul>
+        </div>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;margin-left:.5in;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;margin-left:.5in;'>&nbsp;</p>
+        <p style='margin:0in;font-size:13px;font-family:"Times New Roman",serif;'>&nbsp;</p>
+      </td>
+    </tr>
+  </tbody>
+</table>
